# Agente-Coloring

./: .env.example  .gitignore  KDP_OFFICIAL_SPECS.md  LAUNCH_CHECKLIST.md  MILESTONE_M1_PLAN.md  MILESTONE_M2_PLAN.md  MILESTONE_M3_PLAN.md  MILESTONE_M4_PLAN.md  MILESTONE_M5_PLAN.md  MILESTONE_M6_PLAN.md  Makefile  README.md  SPEC.md  TECHNICAL_DEBT.md  biome.json  e2e_report.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
.claude/agents/: architect.md  implementer.md  tester.md
.claude/commands/: milestone.md  ship.md
.claude/skills/: gemini-banana.md  kdp-cover-compositor.md  kdp-frontmatter.md  kdp-specs.md  playwright-stealth.md
apps/agents/: pyproject.toml
apps/agents/assets/fonts/: README.md
apps/agents/assets/icc/: README.md
apps/agents/colorforge_agents/: __init__.py  crew.py  exceptions.py
apps/agents/colorforge_agents/config/: models.py
apps/agents/colorforge_agents/contracts/: __init__.py  book_draft.py  book_plan.py  listing.py  niche_brief.py  niche_candidate.py  proposed_policy.py  success_score.py  validation_report.py
apps/agents/colorforge_agents/critic/: __init__.py  critic.py  vision_checker.py
apps/agents/colorforge_agents/deep_scout/: __init__.py  embedder.py  llm_analyzer.py  review_scraper.py  scout.py
apps/agents/colorforge_agents/gates/: __init__.py  content_gate.py  listing_gate.py  niche_gate.py
apps/agents/colorforge_agents/generator/: __init__.py  cover_compositor.py  front_matter.py  generator.py  image_gen.py  pdf_assembler.py  post_processor.py
apps/agents/colorforge_agents/monitor/: __init__.py  analyzer.py  performance_monitor.py  policy_proposer.py  scorer.py  scraper.py  snapshot_writer.py
apps/agents/colorforge_agents/niche_hunter/: __init__.py  hunter.py
apps/agents/colorforge_agents/publisher/: publisher_agent.py
apps/agents/colorforge_agents/scoring/: __init__.py  profitability.py
apps/agents/colorforge_agents/seo/: listing_agent.py
apps/agents/colorforge_agents/strategist/: __init__.py  strategist.py
apps/agents/colorforge_agents/trends/: __init__.py  google.py  pinterest.py
apps/agents/colorforge_agents/utils/: currency.py
apps/agents/tests/: test_analyzer.py  test_book_plan_enums.py  test_compliance_fixes.py  test_content_gate.py  test_contracts.py  test_cover_compositor.py  test_critic.py  test_front_matter.py  test_generator.py  test_hunter.py  test_listing_gate.py  test_niche_gate.py  test_pdf_assembler.py  test_policy_proposer.py  test_post_processor.py  test_publisher_agent.py  test_scorer.py  test_scoring.py  test_scout.py  test_seo_listing.py  test_strategist.py  test_trademark_blacklist.py  test_trends.py
apps/agents/tests/fixtures/: README.md
apps/dashboard/: next.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/e2e/: dashboard.spec.ts
apps/dashboard/src/: middleware.ts
apps/dashboard/src/__tests__/: format.test.ts  health-engine-edge.test.ts  health-engine.test.ts  killswitch-router.test.ts
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/app/(dashboard)/: OverviewClient.tsx  layout.tsx  page.tsx
apps/dashboard/src/components/charts/: BookStateChart.tsx  RoyaltyChart.tsx
apps/dashboard/src/components/ui/: AlertRow.tsx  BookTable.tsx  KPICard.tsx  KillswitchButton.tsx  PolicyCard.tsx  (+3 more)
apps/dashboard/src/lib/: auth.ts  colors.ts  format.ts  health-engine.ts  trpc-provider.tsx
apps/dashboard/src/server/: trpc.ts
apps/dashboard/src/stores/: dashboard-store.ts
apps/dashboard/src/test/: setup.ts
apps/worker/: pyproject.toml  run_worker.py
apps/worker/colorforge_worker/: __init__.py  health.py  worker.py
apps/worker/colorforge_worker/jobs/: __init__.py  publish.py  scrape.py
apps/worker/tests/: test_jobs.py
infra/: docker-compose.yml  postgres-init.sql
scripts/: bootstrap.sh  download_assets.py  encrypt-env.sh  kdp_login.py  kill.py  run_e2e_dryrun.py  run_generation.py  run_monitor.py  run_niche_hunt.py  run_publish.py  test_kill.py
(+29 files in other folders)
