[project]
name = "colorforge"
version = "0.1.0"
description = "ColorForge AI -- KDP coloring book automation system"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/agents", "apps/worker", "packages/kdp-client"]


[tool.uv.sources]
colorforge-agents = { workspace = true }
colorforge-worker = { workspace = true }
colorforge-kdp-client = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["apps", "packages"]
