[project]
name = "colorforge-agents"
version = "0.1.0"
description = "ColorForge AI agent system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colorforge_agents"]
