[project]
name = "colorforge-agents"
version = "0.1.0"
description = "ColorForge AI agent system — Niche Hunter, Deep Scout, and more"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.80.0",
    "anthropic>=0.40.0",
    "pytrends>=4.9.2",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "prisma>=0.15.0",
    "redis>=5.0.0",
    "playwright>=1.48.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "google-genai>=0.8.0",
    "reportlab>=4.2.0",
    "Pillow>=10.4.0",
    "pypdf>=4.0.0",
    "colorforge-kdp-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colorforge_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "crewai", "crewai.*",
    "pytrends", "pytrends.*",
    "qdrant_client", "qdrant_client.*",
    "sentence_transformers", "sentence_transformers.*",
    "prisma", "prisma.*",
    "playwright", "playwright.*",
    "anthropic", "anthropic.*",
    "numpy", "numpy.*",
    "google", "google.*",
    "reportlab", "reportlab.*",
    "PIL", "PIL.*",
    "pypdf", "pypdf.*",
    "colorforge_kdp", "colorforge_kdp.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv.sources]
colorforge-kdp-client = { workspace = true }
